# dune-course-material

./: .gitignore  README.md
dune/dune-codegen/python/: .gitignore  CMakeLists.txt  setup.py
dune/dune-codegen/python/dune/codegen/: __init__.py  compile.py  error.py  file.py  logging.conf  options.py  options_global.yaml  sympy.py  tools.py
dune/dune-codegen/test/heatequation/: CMakeLists.txt  driver.hh  heatequation.mini  heatequation.ufl  heatequation_dg.mini  heatequation_explicit_ref.cc  heatequation_implicit_ref.cc  heatequation_time_dependent_bc.mini
dune/dune-codegen/test/nonlinear/: CMakeLists.txt  diffusivewave.ufl  nonlinear.mini  nonlinear.ufl  nonlinear_dg.ufl  nonlinear_dg_matrix_free.mini  nonlinear_matrix_free.mini  reference_driver.hh  reference_nonlinearpoissonfem.hh
dune/dune-pdelab-tutorials/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.h.cmake  dune-pdelab-tutorials.pc.in  dune.module
dune/dune-pdelab-tutorials/c++/: CMakeLists.txt
dune/dune-pdelab-tutorials/c++/doc/: c++_refresher.tex
dune/dune-pdelab-tutorials/c++/exercise/doc/: .gitignore
dune/dune-pdelab-tutorials/c++/exercise/solution/: CMakeLists.txt  task1.cc  task3.cc
dune/dune-pdelab-tutorials/c++/exercise/task/: CMakeLists.txt  task1.cc  (+2 more)
dune/dune-pdelab-tutorials/c++/slides/: c++slides_content.tex
dune/dune-pdelab-tutorials/cmake/modules/: DunePdelabTutorialsMacros.cmake  UseLatexMk.cmake
dune/dune-pdelab-tutorials/gridinterface/: CMakeLists.txt
dune/dune-pdelab-tutorials/gridinterface/slides/: CMakeLists.txt
dune/dune-pdelab-tutorials/overview/: abstractions.tex  exercise-workflow.tex  overview.tex
dune/dune-pdelab-tutorials/tutorial00/doc/: CMakeLists.txt  tutorial00.tex
dune/dune-pdelab-tutorials/tutorial00/slides/: slides00.tex
dune/dune-pdelab-tutorials/tutorial00/src/: CMakeLists.txt  tet.geo  tutorial00.ini  unitcube.geo
dune/dune-pdelab-tutorials/tutorial01/doc/: CMakeLists.txt  tutorial01.bib
dune/dune-pdelab-tutorials/tutorial01/slides/: CMakeLists.txt  slides01.tex
dune/dune-pdelab-tutorials/tutorial01/src/: CMakeLists.txt  driver.hh  tutorial01.cc
dune/dune-pdelab-tutorials/tutorial02/: CMakeLists.txt
dune/dune-pdelab-tutorials/tutorial02/doc/: CMakeLists.txt  tutorial02.tex
dune/dune-pdelab-tutorials/tutorial02/slides/: slides02.tex
dune/dune-pdelab-tutorials/tutorial02/src/: CMakeLists.txt  driver.hh  tutorial02.cc  tutorial02.ini
dune/dune-pdelab-tutorials/tutorial03/doc/: CMakeLists.txt
dune/dune-pdelab-tutorials/tutorial03/slides/: CMakeLists.txt
dune/dune-pdelab-tutorials/tutorial03/src/: CMakeLists.txt  driver.hh  nonlinearheatfem.hh  tutorial03.cc  tutorial03.ini
dune/dune-pdelab-tutorials/tutorial04/: CMakeLists.txt
dune/dune-pdelab-tutorials/tutorial04/doc/: CMakeLists.txt  tutorial04.tex
dune/dune-pdelab-tutorials/tutorial04/slides/: CMakeLists.txt  slides04.bib  slides04.tex
dune/dune-pdelab-tutorials/tutorial04/src/: CMakeLists.txt  driver.hh  tutorial04.cc  tutorial04.ini  wavefem.hh
dune/dune-pdelab-tutorials/tutorial05/: CMakeLists.txt
dune/dune-pdelab-tutorials/tutorial05/doc/: CMakeLists.txt  tutorial05.bib  tutorial05.tex
dune/dune-pdelab-tutorials/tutorial05/slides/: slides05.tex
dune/dune-pdelab-tutorials/tutorial05/src/: CMakeLists.txt  driver.hh  tutorial05.cc
dune/dune-pdelab-tutorials/tutorial06/doc/: CMakeLists.txt
dune/dune-pdelab-tutorials/tutorial06/slides/: CMakeLists.txt
dune/dune-pdelab-tutorials/tutorial06/src/: driver.hh
dune/dune-pdelab-tutorials/tutorial07/doc/: tutorial07.bib  tutorial07.tex
dune/dune-pdelab-tutorials/tutorial07/exercise/: CMakeLists.txt
dune/dune-pdelab-tutorials/tutorial07/slides/: slides07.tex
dune/dune-pdelab-tutorials/tutorial07/src/: CMakeLists.txt  driver.hh  linearacoustics.hh  numericalflux.hh  shallowwaterproblem.hh  splitdomain.geo  splitdomain.msh  tutorial07-maxwell.ini  tutorial07-shallowwater.cc  tutorial07-shallowwater.ini
dune/dune-pdelab-tutorials/tutorial08/: CMakeLists.txt
dune/dune-pdelab-tutorials/tutorial08/doc/: CMakeLists.txt  tutorial08.bib  tutorial08.tex
dune/dune-pdelab-tutorials/tutorial08/src/: CMakeLists.txt  cylinder2d.geo  cylinder2dmesh2.msh  driver_flow.hh  navier-stokes-cylinder.ini  navier-stokes-driven-cavity-3d.ini  navier-stokes-driven-cavity.ini  navier-stokes-lop.hh  navier-stokes-rayleigh-benard.cc  schemes.hh
dune/dune-pdelab-tutorials/tutorial09/exercise/: CMakeLists.txt
dune/dune-pdelab-tutorials/tutorial09/slides/: CMakeLists.txt  classname_filename.ini  generated_executable.txt  heatequation_gen.ufl  slides09.tex
dune/dune-pdelab-tutorials/tutorial09/src/: CMakeLists.txt  heatequation.ufl  heatequation_driver.cc  poisson.ufl  wave_equation.ini
dune/dune-pdelab-tutorials/workflow/exercise/: CMakeLists.txt
dune/dune-pdelab-tutorials/workflow/slides/: CMakeLists.txt
dune/dune-testtools/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  config.h.cmake  dune-testtools.pc.in
dune/dune-testtools/cmake/modules/: ConditionalIncludes.cmake  DuneSystemtests.cmake  DuneTesttoolsMacros.cmake  ExpandMetaIni.cmake  ParsePythonData.cmake
dune/dune-testtools/doc/: CMakeLists.txt  technical.tex
dune/dune-testtools/doc/doxygen/: Doxylocal
dune/dune-testtools/doc/sphinx/: CMakeLists.txt  metaini.rst  python.rst  quickstartdune.rst  sphinx_metainicommand.py  testingtesttools.rst
dune/dune-testtools/dune/testtools/: outputtree.hh
dune/dune-testtools/python/: .gitignore  MANIFEST.in  setup.py
dune/dune-testtools/python/scripts/: dune_expand_metaini.py  dune_extract_static.py  dune_metaini_analysis.py
dune/dune-testtools/python/tests/: command.ini  complexcommand.mini  cond1.mini  cond2.mini  conftest.py  discard.mini  metaini1.mini  metaini2.mini  parse1.ini  parse3.ini  repeat.mini  test_discarding.py  test_escapes.py  test_fuzzycomparevtk.py  test_import_ini.py  test_metaIni.py  test_parseIni.py  vtu.vtu  vtu1_binary.vtu  vtu5.vtu  vtu_binary.vtu  vtuug.vtu  zfill.mini
dune/dune-testtools/python/wrapper/: dune_convergencetest.py  dune_execute.py  dune_outputtreecompare.py
(+2988 files in other folders)
