add_executable("navier-stokes-cylinder" navier-stokes-cylinder.cc)
add_executable("navier-stokes-driven-cavity" navier-stokes-driven-cavity.cc)
add_executable("navier-stokes-driven-cavity-3d" navier-stokes-driven-cavity-3d.cc)
add_executable("navier-stokes-rayleigh-benard" navier-stokes-rayleigh-benard.cc)

dune_symlink_to_source_files(FILES navier-stokes-cylinder.ini)
dune_symlink_to_source_files(FILES navier-stokes-driven-cavity.ini)
dune_symlink_to_source_files(FILES navier-stokes-driven-cavity-3d.ini)
dune_symlink_to_source_files(FILES navier-stokes-rayleigh-benard.ini)
dune_symlink_to_source_files(FILES cylinder2d.geo)
dune_symlink_to_source_files(FILES cylinder2dmesh1.msh)
dune_symlink_to_source_files(FILES cylinder2dmesh2.msh)
dune_symlink_to_source_files(FILES cylinder2dmesh3.msh)
dune_symlink_to_source_files(FILES cylinder2dmesh4.msh)
dune_symlink_to_source_files(FILES unitsquare.geo)
dune_symlink_to_source_files(FILES unitsquare.msh)
