add_executable(dyntest1 source.cc)
add_executable(dyntest2 source.cc)
set_property(TARGET dyntest2 APPEND PROPERTY COMPILE_DEFINITIONS "SWITCH=ON")

add_system_test_per_target(TARGET dyntest1 dyntest2 INIFILE dynamictest.mini ${DEBUG_MACRO_TESTS})
dune_assert(TEST_EXISTS dyntest1_1_0000 MESSAGE "dynamicvariants: A test called dyntest1_1_0000 should exist")
dune_assert(TEST_EXISTS dyntest1_1_0001 MESSAGE "dynamicvariants: A test called dyntest1_1_0001 should exist")
dune_assert(TEST_EXISTS dyntest1_2_0000 MESSAGE "dynamicvariants: A test called dyntest1_2_0000 should exist")
dune_assert(TEST_EXISTS dyntest1_2_0001 MESSAGE "dynamicvariants: A test called dyntest1_2_0001 should exist")
dune_assert(TEST_EXISTS dyntest1_3_0000 MESSAGE "dynamicvariants: A test called dyntest1_3_0000 should exist")
dune_assert(TEST_EXISTS dyntest1_3_0001 MESSAGE "dynamicvariants: A test called dyntest1_3_0001 should exist")
dune_assert(TEST_EXISTS dyntest2_1_0000 MESSAGE "dynamicvariants: A test called dyntest2_1_0000 should exist")
dune_assert(TEST_EXISTS dyntest2_1_0001 MESSAGE "dynamicvariants: A test called dyntest2_1_0001 should exist")
dune_assert(TEST_EXISTS dyntest2_2_0000 MESSAGE "dynamicvariants: A test called dyntest2_2_0000 should exist")
dune_assert(TEST_EXISTS dyntest2_2_0001 MESSAGE "dynamicvariants: A test called dyntest2_2_0001 should exist")
dune_assert(TEST_EXISTS dyntest2_3_0000 MESSAGE "dynamicvariants: A test called dyntest2_3_0000 should exist")
dune_assert(TEST_EXISTS dyntest2_3_0001 MESSAGE "dynamicvariants: A test called dyntest2_3_0001 should exist")
